deal parameter